--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Image gallery</title>
 </head>
 <body>
+
+    <!-- Site Headr -->
+    <header>
+        <a href="#">
+            <img src="https://via.placeholder.com/200/80" alt="Placeholder Logo" width="200" height="80">
+        </a>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Nature</a></li>
+            <li><a href="index.html">Buildingis</a></li>
+            <li><a href="index.html">People</a></li>
+            <li><a href="index.html">Wallpaper</a></li>
+            <li><a href="index.html">Animals</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
