--- a/index.html
+++ b/index.html
@@ -24,5 +24,52 @@
         </ul>
     </nav>
     
+    <!-- Main Content  -->
+    <main>
+        <h1>Photo gallery</h1>
+        <hr>
+        <section>
+            <h2>Top photo</h2>
+            <ul>
+                <li>
+                    <img src="https://picsum.photos/250/?random = 1" alt="Photo" width="250" height="250"></li>
+                <li>
+                    <img src="https://picsum.photos/250/?random = 2" alt="Photo" width="250" height="250"></li>
+                <li>
+                    <img src="https://picsum.photos/250/?random = 3" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 4" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 5" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 6" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 7" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 8" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 9" alt="Photo" width="250" height="250">
+                </li>
+                <li>
+
+                    <img src="https://picsum.photos/250/?random = 10" alt="Photo" width="250" height="250">
+                </li>
+            </ul>
+        </section>
+    </main>
+    
+
 </body>
 </html>
