Add site -footer

--- a/index.html
+++ b/index.html
@@ -71,5 +71,14 @@
     </main>
     
 
+    <!-- Site Footer  -->
+    <footer>
+        <ul>
+            <li><a href="#" target="_blank"> Telegram</a></li>
+            <li><a href="#" target="_blank"> Facebook</a></li>
+            <li><a href="#" target="_blank"> Twitter</a></li>
+        </ul>
+        <p>Copyright 2024 MJB </p>
+    </footer>
 </body>
 </html>
